<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postImageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@mipmap/add_btn"
            android:scaleType="centerCrop"
            android:contentDescription="@string/post_image"/>

        <TextView
            android:id="@+id/postTitleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/post_title"/>

        <TextView
            android:id="@+id/postTextList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/post_description_here"/>

        <TextView
            android:id="@+id/timestampList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:padding="5dp"
            android:textStyle="italic"/>

    </LinearLayout>

</android.support.v7.widget.CardView>